# RTS10_assignments

./: .cproject
Core/Src/: main.c
VersdOS_student/: .cproject  .mxproject  .project  STM32F411VETX_RAM.ld  VersdOS_student Debug.launch
VersdOS_student/Core/Src/: VersdOS.c  VersdOS.h  VersdOS_ll.s  main.c
VersdOS_student/Debug/: VersdOS_student.elf  VersdOS_student.list  VersdOS_student.map  makefile  objects.list
msgqueue/: .cproject  .project  STM32F411VETX_FLASH.ld  buffer (1).launch  msgqueue.launch
msgqueue/Debug/: buffer.elf  buffer.list  buffer.map  makefile  msgqueue.elf  msgqueue.list  msgqueue.map  objects.list  sources.mk
opdr_3_1/: .project  opdr_3_1 Debug.launch
opdr_3_1/Debug/: makefile  opdr_3_1.elf  opdr_3_1.list  opdr_3_1.map
opdr_3_2/: .project  opdr_3_2 Debug.launch
opdr_3_2/Debug/: makefile  objects.list  opdr_3_2.elf  opdr_3_2.list  opdr_3_2.map
opdr_3_3/: .project  opdr_3_3 Debug.launch
opdr_3_3/Debug/: makefile  opdr_3_3.elf  opdr_3_3.list  opdr_3_3.map
opdr_3_4/: .project  opdr_3_4 Debug.launch
opdr_3_4/Debug/: makefile  opdr_3_4.elf  opdr_3_4.list  opdr_3_4.map
opdr_3_5/: .project  opdr_3_5 Debug.launch
opdr_3_5/Debug/: makefile  opdr_3_5.elf  opdr_3_5.list  opdr_3_5.map
opdr_3_6/: .project  STM32F411VETX_FLASH.ld  opdr_3_6.launch
opdr_3_6/Debug/: makefile  opdr_3_6.elf  opdr_3_6.list  opdr_3_6.map
week8/week8-opdrachten/: Cargo.toml  README.md  memory.x
week8/week8-opdrachten/.cargo/: config.toml
week8/week8-opdrachten/examples/: allocator.rs  hello.rs
week8/week8-opdrachten/src/: main.rs
(+42 files in other folders)
