[package]
authors = ["Sem van der Hoeven <semmer99@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "week8-opdrachten"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
panic-halt = "0.2"
alloc-cortex-m = "0.4.2"
cortex-m-semihosting = "0.5"

[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f411", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411"]

# this lets you use `cargo fix`!
# [[bin]]
# name = "week8-opdrachten"
# test = false
# bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations